fix response and big screen

--- a/index.html
+++ b/index.html
@@ -365,11 +365,13 @@ quo suscipit.<p>
 <a class="send-btn" href="send-btn">Send</a>
 </div>
 </form>
-<div>
-
-</div>
 </section>
 </main>
+<footer>
+	<div class="footer-block">
+
+	</div>
+</footer>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="crossorigin="anonymous"></script> 
 <script src="js/script.js"></script>   
 </body>
